--- a/Mandel.bib
+++ b/Mandel.bib
@@ -31112,3 +31112,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{FishbachKalogera:2021time,
+       author = {{Fishbach}, Maya and {Kalogera}, Vicky},
+        title = "{The Time Delay Distribution and Formation Metallicity of LIGO-Virgos Binary Black Holes}",
+      journal = {\apjl},
+     keywords = {Gravitational waves, Gravitational wave astronomy, Astrophysical black holes, Stellar mass black holes, Cosmological evolution, Bayesian statistics, 678, 675, 98, 1611, 336, 1900, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = jun,
+       volume = {914},
+       number = {2},
+          eid = {L30},
+        pages = {L30},
+          doi = {10.3847/2041-8213/ac05c4},
+archivePrefix = {arXiv},
+       eprint = {2105.06491},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...914L..30F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
