--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -430,7 +430,7 @@ Spin magnitudes may also depend sensitively on evolutionary history.  A massive 
 
 This argument for slowly spinning black holes in merging compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{FishbachKalogera:2021}.   However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see section \ref{environ}]{HotokezakaPiran:2017}.  In particular, black holes in high-mass X-ray binaries such as Cygnus X-1 could be spun up during mass transfer late in the primary's main sequence, when the core and envelope are still strongly coupled \citep{Valsecchi:2010,Qin:2018}.  Such systems may then be unlikely to produce merging black holes as they are too close to experience a common envelope and too wide to merge without one \citep{Neijssel:2020CygX1}, though some fraction could still merge through fortuitous natal kicks of the secondary, possibly explain the spin precession of GW151226 \citep{Chia:2021} (but see \cite{GW151226,MateuLucena:2021}).  Moreover, as discussed in section \ref{sec:XRB}, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones.
 
-Meanwhile, there is active debate in the literature about the black-hole spin distribution of gravitational-wave events (see section \ref{sec:GWevents}).  Among spin variables that remain approximately constant during the inspiral, gravitational-wave spin measurements most accurately constrain the effective spin $\chi_\mathrm{eff}$ \citep{Racine:2008,Ajith:2011}, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  Low values of $\chi_\mathrm{eff}$ could point to either low spin magnitudes or isotropically directed spins, with the latter being the hallmark of isolated binary evolution.  The diverging conclusions regarding the fraction of preferentially spin-aligned binaries  \citep{GWTC2:pop,GWTC3:pop,Roulet:2021,Callister:2021,Galaudage:2021} appear to be a consequence of the chosen parameterised model, which may be mis-specified in some cases.  At face value, the absence of confidently negative measurements of $\chi_\mathrm{eff}$ and the roughly one fifth fraction of observed binaries with positive $\chi_\mathrm{eff}$ inconsistent with zero suggest that 80\% of observed binaries contain non-spinning black holes while 20\% have moderate net spin in the direction of the orbital angular momentum.  This appears consistent with isolated binary evolution with occasional tidal spin-up as the dominant channel.  The distribution of spin between binary components, the degree of spin precession, and possible correlations between spins and masses remain open issues. 
+Meanwhile, there is active debate in the literature about the black-hole spin distribution of gravitational-wave events (see section \ref{sec:GWevents}).  Among spin variables that remain approximately constant during the inspiral, gravitational-wave spin measurements most accurately constrain the effective spin $\chi_\mathrm{eff}$ \citep{Racine:2008,Ajith:2011}, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  Low values of $\chi_\mathrm{eff}$ could point to either low spin magnitudes or isotropically directed spins, with the latter being the hallmark of isolated binary evolution.  The diverging conclusions regarding the fraction of preferentially spin-aligned binaries  \citep{GWTC2:pop,GWTC3:pop,Roulet:2021,Callister:2021,Galaudage:2021} appear to be a consequence of the chosen parametrised model, which may be mis-specified in some cases.  At face value, the absence of confidently negative measurements of $\chi_\mathrm{eff}$ and the roughly one fifth fraction of observed binaries with positive $\chi_\mathrm{eff}$ inconsistent with zero suggest that 80\% of observed binaries contain non-spinning black holes while 20\% have moderate net spin in the direction of the orbital angular momentum.  This appears consistent with isolated binary evolution with occasional tidal spin-up as the dominant channel.  The distribution of spin between binary components, the degree of spin precession, and possible correlations between spins and masses remain open issues. 
 
 \subsubsection{Orbital eccentricities}
 	The orbital eccentricities of merging black-hole binaries may contain information about their previous evolution \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitivity band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep[][but see \cite{Tsang:2013}]{OLeary:2008}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}.  We discussed the exciting indications of possible measurements of non-zero eccentricity \citep{RomeroShaw:2021} in section \ref{sec:GWevents}.
@@ -451,10 +451,7 @@ The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot
 	} 
 \end{figure}
 
-Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010,Kruckow:2018}. For the isolated binary channel, delayed stellar expansion at lower metallicity, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.
-
-The above considerations place constraints on the formation time of the systems that produced the observed merging black-hole binaries. Most low-metallicity star formation occurred in the early Universe, before the interstellar medium was polluted with metal-rich products of stellar evolution; however, a broad range of stellar metallicities is observed at all epochs  \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. Meanwhile, population synthesis models of the classical formation channel indicate that the distribution of delay time $\tau$ between star formation and merger peaks at shorter delay times, with a $p(\tau) \propto 1/\tau$ decay.  This time delay distribution is consistent with gravitational-wave driven merger time scales for binary separations distributed as $p(a) \propto 1/a$ at the time of double black hole formation (see section \ref{sec:CErates}), but  is robust to moderate changes in separation distribution because of the very steep scaling of the delay time with separation, $\tau \propto a^4$.  (Other formation channels, particularly chemically homogeneous evolution, predict very different delay time distributions, potentially providing an additional way to discriminate between formation channels.)  A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
-
+Forming heavier black holes, such as some of those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity \citep{Belczynski:2016}. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010,Kruckow:2018}. For the isolated binary channel, delayed stellar expansion at lower metallicity, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.  Most low-metallicity star formation occurred in the early Universe, before the interstellar medium was polluted with metal-rich products of stellar evolution; however, a broad range of stellar metallicities is observed at all epochs  \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}.  Of course, the mergers can be significantly delayed relative to star formation and black holes formed in the early Universe may only now be merging.  Various formation channels predict a range of delay time distributions, which could potentially provide an additional way to discriminate between them \citep{FishbachKalogera:2021time}.  
   
 
 \section{Prospects for gravitational-wave astronomy}\label{prospect}
@@ -462,33 +459,33 @@ The above considerations place constraints on the formation time of the systems 
 The gravitational-wave events observed to date already provide a number of exciting insights into the astrophysics of binary black holes and their progenitors, but many open questions remain.  Fortunately, these observations indicate a binary black hole merger rate of around $20$ Gpc$^{-3}$ yr$^{-1}$ at redshift zero with a likely higher merger rate at higher redshifts \citep{GWTC3:pop}, which points to the prospect of hundreds of detections within the next few years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to inaugurate gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference, and theoretical modelling.
 
 \subsection{Individual exciting events}
-Three years ago, in an earlier version of this review, we suggested that two of the most exciting individual observations could include components in either the pair-instability supernova mass gap or the possible mass gap between neutron stars and $\gtrsim 5\, M_\odot$ black holes.  With GW190521 and GW190814, both have now been observed!
+Three years ago, in an earlier version of this review, we suggested that two of the most exciting individual observations could include components in either the predicted mass gap due to pair-instability supernovae or the possible mass gap between neutron stars and $\gtrsim 5\, M_\odot$ black holes.  With GW190521 and GW190814, both have now been observed!
 
 Other individually exciting events could include the first confirmed discovery of an intermediate-mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{AmaroSeoaneSantamaria:2009,Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral of a stellar-mass compact object into such a black hole \citep[e.g.,][]{Mandel:2008,Haster:2015IMRI,Haster:2016}. 
 
 A source with a detectable eccentricity would clearly signal a dynamical capture \citep{Breivik:2016}. 
 
-A measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate an unexpected anti-alignment between rapid spins and the binary's orbital angular momentum, perhaps through either a supernova spin tilt or dynamical formation.  
+A measurement of an effective spin value close to either 1 or $-1$ in a binary with nearly equal-mass components would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate an unexpected anti-alignment between rapid spins and the binary's orbital angular momentum, perhaps through either a supernova spin tilt or dynamical formation.  
 
-Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.
+Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would point to the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.
 
 \subsection{Population statistics}
 
 Population statistics will generally yield more information than individual events.  We can use the statistical analysis of sufficiently large observational data sets to infer bulk properties of the source population, such as the mass and spin distributions, and to search for distinct subpopulations.  We can separate the approaches to inference on the observed populations into two types: unmodelled or weakly modelled inference, and inference that relies on specific accurate models. 
 
-At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{BBH:O1,GWTC2:pop,GWTC3:pop}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} and \citet{Edelman:2021} explored weakly parameterised mass model to search for the presence of a mass gap due to pair-instability supernovae or an excess peak due to pulsational pair-instability supernovae, while \citet{RinaldiDelPozzo:2021} considered a completely non-parametric Dirichlet process Gaussian mixture model for the mass distribution.  Meanwhile, as discussed above, several groups investigated weakly parameterised inference on the spin distributions \citep[e.g.,][]{TalbotThrane:2017,GWTC2:pop,Callister:2021,Galaudage:2021}.  
+At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{BBH:O1,GWTC2:pop,GWTC3:pop}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} and \citet{Edelman:2021} explored weakly parametrised mass models to search for the presence of a mass gap due to pair-instability supernovae or an excess peak due to pulsational pair-instability supernovae, while \citet{RinaldiDelPozzo:2021} considered a completely non-parametric Dirichlet process Gaussian mixture model for the mass distribution.  Meanwhile, as discussed above, several groups investigated inference on the spin distributions with parametrised phenomenological models \citep[e.g.,][]{TalbotThrane:2017,GWTC2:pop,Callister:2021,Galaudage:2021}.  
 
-We can look for distinct subpopulations or ``clusters'' of events in the observable parameter space, in the hope of finding distinct categories corresponding to different evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to determine whether there are distinct subpopulations of events in mass space even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
+We can look for distinct subpopulations or ``clusters'' of events in the observable parameter space, in the hope of finding distinct categories corresponding to different evolutionary channels.  These approaches have been proposed for both mass \citep{Mandel:2015,Mandel:2016cluster} and spin \citep{Farr:2018,Powell:2019} distributions.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to identify the various clusters and measure the relative frequencies of events in these categories.
 
-The next level of population-based inference relies on assuming that precise, possibly parameterised, subpopulation distributions are known.  In this case, hierarchical modelling \citep[extreme deconvolution in the language of][]{Hogg:2010} can be used to simultaneously determine the ratios of different subpopulations (e.g., arising from different formation channels) and any free parameters in the subpopulation models.  \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015} and \citet{Stevenson:2017spin} carried out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels and measure their branching ratios through hierarchical modelling --- again, if the distributions under different channels are known \citep{Stevenson:2017spin}.   On the other hand, more precise models increase the risk of misleading results through model misspecification.
+The next level of population-based inference relies on assuming that precise, possibly parametrised, subpopulation distributions are known.  In this case, hierarchical modelling (extreme deconvolution in the language of \cite{Hogg:2010}) can be used to simultaneously determine the ratios of different subpopulations (e.g., arising from different formation channels) and any free parameters in the subpopulation models.  Again, such approaches have been applied to both mass \citep[e.g.,][]{Zevin:2017} and spin \citep[e.g.,][]{Vitale:2015,Stevenson:2017spin} distributions and are generally expected to have greater resolving power than clustering in the absence of accurate population models.  On the other hand, reliance on precise models in the face of significant modelling uncertainties \citep[e.g.,][]{Belczynski:2021} increases the  the risk of misleading results through model misspecification.
 
 \subsection{The future of population synthesis techniques}
-There is, of course, a multitude of uncertain physics within any given model, both limiting the usefulness of approaches that rely on a precise knowledge of subpopulation distributions and, more importantly, providing a set of key science questions that we would like to answer with the aid of gravitational-wave observations.  How much mass do stars lose in winds, and what exactly is the impact of metallicity and rotation on stellar evolution?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the remnant receive? How conservative is mass transfer in binaries, and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
+There is, of course, a multitude of uncertain physics within any given model, both limiting the usefulness of approaches that rely on a precise knowledge of subpopulation distributions and, more importantly, providing a set of key science questions that we would like to answer with the aid of gravitational-wave observations.  How much mass do stars lose in winds, and what exactly is the impact of metallicity and rotation on stellar evolution?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the remnant receive? How conservative is mass transfer in binaries and how much orbital angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer?  What are the conditions for the onset of a common-envelope phase and common-envelope ejection, and how does the binary change in the process?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
 
-One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrise the uncertain physics and predict the expected source rates and distributions under different models.  Most efforts to date have relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep[e.g.,][]{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, and this is not sufficient to cover the full parameter space or to consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017,TaylorGerosa:2018,Wong:2020,Lin:2021} suggest that a full exploration of this space will soon be possible. For example, \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as those describing mass loss rates during the Wolf-Rayet and luminous blue variable phases of evolution, and common-envelope energetics, can be measured to the level of a few percent with a thousand detections. 
+One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrise the uncertain physics and predict the expected source rates and distributions under different models.  Historically, most efforts relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep[e.g.,][]{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than  tens or hundreds of models, and this is not sufficient to cover the full parameter space or to investigate the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017,TaylorGerosa:2018,Wong:2020,Lin:2021} suggest that a full exploration of this space will soon be possible. For example, \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as those describing mass loss rates during the Wolf-Rayet and luminous blue variable phases of evolution, and common-envelope energetics, could be measured to the level of a few percent with a thousand detections. 
 
 \subsection{Other datasets and future missions}
-Additional observational datasets will further aid in interpreting gravitational-wave observations and in refining models of binary stellar evolution.
+Additional observational datasets will further aid in interpreting gravitational-wave observations and in refining models of stellar and binary evolution.
 
 Future gravitational-wave missions raise the prospect of observing the evolution of populations of merging binaries -- or individual systems -- across a broad band of frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012}, to the LIGO/Virgo band.  The ability to track individual sources and source populations across the frequency spectrum will make it possible to combine information which can best be measured at low frequencies (e.g., eccentricity and sky location) and high frequencies (e.g., spins).  Meanwhile, a stochastic background of gravitational waves from individually unresolvable binary black holes could be measured in the next few years \citep{GW150914:stoch}, possibly providing additional insight on high-redshift populations; however, the only constraining parameter in a detection of such a background will likely be its amplitude, which carries only limited information \citep{Callister:2016}.
 
@@ -496,9 +493,9 @@ Ultimately, the most useful constraints are likely to come from the requirement 
 
 \subsection{Outlook}
 
-Today we have nearly 50 observations of merging binary black holes.  That is 50 more than 6 years ago, and we have already learned a great deal.  Binary black holes exist. They merge. They do so relatively frequently.  They have a broad range of masses. None of the sources seen so far seem to have rapid net spins in the direction opposite to the orbital angular momentum.  We also have several plausible evolutionary channels, some of which appear to explain many of the observed properties: merger rates, masses, and possibly spins. 
+Today we have around 80 observations of merging binary black holes.  That is 80 more than 6 years ago, and we have already learned a great deal.  Binary black holes exist. They merge. They do so relatively frequently.  They have a broad range of masses. None of the sources seen so far seem to have rapid net spins in the direction opposite to the orbital angular momentum.  We also have several plausible evolutionary channels, some of which appear to explain many of the observed properties: merger rates, masses, and possibly spins. 
 
-At the same time, we have the tools in place to create detailed models of stellar and binary evolution and of dynamical interactions under a variety of parameterisable assumptions.  The statistical techniques for analysing the data and inferring properties directly from the observations, or by comparison with the detailed models, are in place.  Most importantly, we have wonderful detectors which are continuing to improve, and we expect to obtain enough data in the next few years to carry out these analyses.  Perhaps in a few years we will know that all of the channels described here contribute non-negligibly to binary black hole formation; that black holes receive small kicks at birth; and that they spin slowly in merging binaries except when stripped helium stars are spun up through tides. We may also have made the first detections of new objects such as $200 M_\odot$ intermediate-mass black holes.
+At the same time, we have the tools in place to create detailed models of stellar and binary evolution and of dynamical interactions under a variety of parametrisable assumptions.  Statistical techniques are in place for analysing the data and inferring properties directly from the observations or by comparison with the detailed models.  Most importantly, we have wonderful detectors which are continuing to improve, and we expect to obtain enough data in the next few years to carry out these analyses.  Perhaps in a few years we will know that all of the channels described here contribute non-negligibly to binary black hole formation; that black holes receive small kicks at birth; and that they spin slowly in merging binaries except when stripped helium stars are spun up through tides. We may also have made the first detections of new objects such as $200 M_\odot$ intermediate-mass black holes.
 
 The future of gravitational-wave astronomy holds the thrilling prospect of addressing the inverse problem of massive binary stellar evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a palaeontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their fossilised remnants, we can now use merging black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries.
 
